scss/theme/_resets.scss
/* ... */
// clients comments section
.section-clients-comments {
  max-width: 1200px;
  margin: auto;

  .clientComment:before {
    content: "";
    background: url(/wp-content/uploads/2021/11/icon-quote-red.png) no-repeat;
    background-size: contain;
    position: absolute;
    left: 14px;
    width: 34px;
    height: 27px;
    top: 13px;
  }
  .clientComment {
    font-size: 20.5px;
    line-height: 35px;
    margin-top: 60px;
  }

  .clientName {
    font-size: 20px;
    line-height: 35px;
  }

  @media (min-width: $responsive-md) {
    .clientComment {
      font-size: 16.37px;
      line-height: 24.91px;
      min-height: 184px;
    }
    .clientComment:before {
      left: -14px;
    }
    .clientName {
      font-size: 18px;
      line-height: 25px;
      min-height: 65px;
    }
  }
  @media (min-width: $responsive-lg) {
    .clientComment:before {
      left: -14px;
    }
    .clientComment {
      font-size: 23px;
      line-height: 35px;
      min-height: 282px;
    }
    .clientName {
      font-size: 25px;
      line-height: 35px;
      min-height: 110px;
    }
  }
  @media (min-width: $responsive-xl) {
    .clientComment {
      min-height: 280px;
    }
    .clientName {
      min-height: 75px;
    }
  }
}

.comparison-row a {
  color: #ff5254;
}

section.section-quote {
  text-align: center;
  padding: 40px 20px;
  h3 {
    position: relative;
    display: inline;
    font-size: 20px;
    line-height: 1.2;
    color: #000;
    font-weight: 400;
    font-family: "Times New Roman", Times, serif;
    margin-bottom: 30px;
    &:before {
      content: "";
      background: url("img/icon-quote-red.png") no-repeat;
      background-size: contain;
      position: absolute;
      top: -13.5px;
      left: -31px;
      width: 21px;
      height: 16px;
    }

    &:after {
      background: url("img/icon-quote-red.png") no-repeat;
      background-size: contain;
      position: absolute;
      bottom: 0;
      right: -31px;
      transform: rotate(180deg);
      content: "";
      width: 21px;
      height: 16px;
    }
  }
  p {
    margin-top: 60px;
  }
  @media (min-width: 992px) {
    padding: 114px 0 80px;
    h3 {
      font-size: 30px;
      line-height: 40px;
      margin-bottom: 60px;
      &:before {
        top: -13.5px;
        left: -49px;
        width: 34px;
        height: 27px;
      }

      &:after {
        bottom: 0;
        right: -49px;
        width: 34px;
        height: 27px;
      }
    }
  }
}

